// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditRating matches snapshots: rating=0 1`] = `
<div
  className="my-rating"
>
  <i
    className="small circle icon"
    onClick={[Function]}
  />
  <i
    className="icon small empty star"
    onClick={[Function]}
  />
  <i
    className="icon small empty star"
    onClick={[Function]}
  />
  <i
    className="icon small empty star"
    onClick={[Function]}
  />
  <i
    className="icon small empty star"
    onClick={[Function]}
  />
  <i
    className="icon small empty star"
    onClick={[Function]}
  />
</div>
`;

exports[`EditRating matches snapshots: rating=1 1`] = `
<div
  className="my-rating"
>
  <i
    className="small circle icon thin"
    onClick={[Function]}
  />
  <i
    className="icon small star"
    onClick={[Function]}
  />
  <i
    className="icon small empty star"
    onClick={[Function]}
  />
  <i
    className="icon small empty star"
    onClick={[Function]}
  />
  <i
    className="icon small empty star"
    onClick={[Function]}
  />
  <i
    className="icon small empty star"
    onClick={[Function]}
  />
</div>
`;

exports[`EditRating matches snapshots: rating=5 1`] = `
<div
  className="my-rating"
>
  <i
    className="small circle icon thin"
    onClick={[Function]}
  />
  <i
    className="icon small star"
    onClick={[Function]}
  />
  <i
    className="icon small star"
    onClick={[Function]}
  />
  <i
    className="icon small star"
    onClick={[Function]}
  />
  <i
    className="icon small star"
    onClick={[Function]}
  />
  <i
    className="icon small star"
    onClick={[Function]}
  />
</div>
`;

exports[`EditRating matches snapshots: rating=null 1`] = `
<div
  className="my-rating"
>
  <i
    className="small circle icon"
    onClick={[Function]}
  />
  <i
    className="icon small empty star"
    onClick={[Function]}
  />
  <i
    className="icon small empty star"
    onClick={[Function]}
  />
  <i
    className="icon small empty star"
    onClick={[Function]}
  />
  <i
    className="icon small empty star"
    onClick={[Function]}
  />
  <i
    className="icon small empty star"
    onClick={[Function]}
  />
</div>
`;

exports[`Rating matches snapshots: rating=0 1`] = `
<div
  className="compact my-rating"
/>
`;

exports[`Rating matches snapshots: rating=1 1`] = `
<div
  className="compact my-rating"
>
  <i
    className="icon small star"
  />
</div>
`;

exports[`Rating matches snapshots: rating=5 1`] = `
<div
  className="compact my-rating"
>
  <i
    className="icon small star"
  />
  <i
    className="icon small star"
  />
  <i
    className="icon small star"
  />
  <i
    className="icon small star"
  />
  <i
    className="icon small star"
  />
</div>
`;

exports[`Rating matches snapshots: rating=null 1`] = `
<div
  className="compact my-rating"
/>
`;
